# dumpf

./: ChangeLog  Makefile.am  README.md  autogen.sh  autogen.zsh  bootstrap.sh  bootstrap.zsh  configure.ac  dumpf.1  dumpf.spec.in
src/: Makefile.am  dumpf.c  gcc-compat.h
